feat: permitir ingresar para cancelar la baja
